[workspace]
resolver = "2"
members = [
    "vidwall",
    "vidplayer",
    "vidproxy",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[workspace.dependencies]
chrome-browser = { git = "https://github.com/tibellium/crates", rev = "e737ca1a5f505be763a38f46e26449c20989260d" }
drm-widevine = { git = "https://github.com/tibellium/crates", rev = "e737ca1a5f505be763a38f46e26449c20989260d" }
ffmpeg-types = { git = "https://github.com/tibellium/crates", rev = "e737ca1a5f505be763a38f46e26449c20989260d" }
ffmpeg-source = { git = "https://github.com/tibellium/crates", rev = "e737ca1a5f505be763a38f46e26449c20989260d" }
ffmpeg-decode = { git = "https://github.com/tibellium/crates", rev = "e737ca1a5f505be763a38f46e26449c20989260d" }
ffmpeg-transform = { git = "https://github.com/tibellium/crates", rev = "e737ca1a5f505be763a38f46e26449c20989260d" }
ffmpeg-encode = { git = "https://github.com/tibellium/crates", rev = "e737ca1a5f505be763a38f46e26449c20989260d" }
ffmpeg-sink = { git = "https://github.com/tibellium/crates", rev = "e737ca1a5f505be763a38f46e26449c20989260d" }

[profile.release]
opt-level = 3
lto = true
