[workspace]
resolver = "2"
members = [
    "vidwall",
    "vidplayer",
    "vidproxy",
    "vidproxy2",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[workspace.dependencies]
chrome-browser = { git = "https://github.com/tibellium/crates", rev = "f052a8d18fa204211d71d84f546b4b66eb5719e0" }
drm-widevine = { git = "https://github.com/tibellium/crates", rev = "f052a8d18fa204211d71d84f546b4b66eb5719e0" }
ffmpeg-types = { git = "https://github.com/tibellium/crates", rev = "f052a8d18fa204211d71d84f546b4b66eb5719e0" }
ffmpeg-source = { git = "https://github.com/tibellium/crates", rev = "f052a8d18fa204211d71d84f546b4b66eb5719e0" }
ffmpeg-decode = { git = "https://github.com/tibellium/crates", rev = "f052a8d18fa204211d71d84f546b4b66eb5719e0" }
ffmpeg-transform = { git = "https://github.com/tibellium/crates", rev = "f052a8d18fa204211d71d84f546b4b66eb5719e0" }
ffmpeg-encode = { git = "https://github.com/tibellium/crates", rev = "f052a8d18fa204211d71d84f546b4b66eb5719e0" }
ffmpeg-sink = { git = "https://github.com/tibellium/crates", rev = "f052a8d18fa204211d71d84f546b4b66eb5719e0" }

[profile.release]
opt-level = 3
lto = true
