[workspace]
resolver = "2"
members = [
    "vidwall",
    "vidplayer",
    "vidproxy",
    "vidproxy2",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[workspace.dependencies]
chrome-browser = { git = "https://github.com/tibellium/crates", rev = "4cf3d84f00f6e71c2be8a6a86394d77233a84a48" }
drm-widevine = { git = "https://github.com/tibellium/crates", rev = "4cf3d84f00f6e71c2be8a6a86394d77233a84a48" }
ffmpeg-types = { git = "https://github.com/tibellium/crates", rev = "4cf3d84f00f6e71c2be8a6a86394d77233a84a48" }
ffmpeg-source = { git = "https://github.com/tibellium/crates", rev = "4cf3d84f00f6e71c2be8a6a86394d77233a84a48" }
ffmpeg-decode = { git = "https://github.com/tibellium/crates", rev = "4cf3d84f00f6e71c2be8a6a86394d77233a84a48" }
ffmpeg-transform = { git = "https://github.com/tibellium/crates", rev = "4cf3d84f00f6e71c2be8a6a86394d77233a84a48" }
ffmpeg-encode = { git = "https://github.com/tibellium/crates", rev = "4cf3d84f00f6e71c2be8a6a86394d77233a84a48" }
ffmpeg-sink = { git = "https://github.com/tibellium/crates", rev = "4cf3d84f00f6e71c2be8a6a86394d77233a84a48" }

[profile.release]
opt-level = 3
lto = true
