[package]
name = "vidplayer"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "vidplayer"
path = "src/main.rs"

[dependencies]
# FFmpeg crate ecosystem
ffmpeg-types.workspace = true
ffmpeg-source.workspace = true
ffmpeg-decode.workspace = true
ffmpeg-transform.workspace = true

# GUI framework
gpui = "0.2"

# Audio output
cpal = "0.15"
ringbuf = "0.4"

# Concurrency
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }

# Image handling
image = "0.25"

# Byte casting for audio samples
bytemuck = { version = "1", features = ["derive"] }

# Window state persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
uuid = "1"
