[package]
name = "vidproxy"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "vidproxy"
path = "src/main.rs"

[dependencies]
# FFmpeg crates
ffmpeg-types.workspace = true
ffmpeg-source.workspace = true
ffmpeg-sink.workspace = true

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal", "sync", "time"] }
tokio-stream = "0.1"

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Temp directory
tempfile = "3"

# DRM sniffer (Chrome automation + key extraction)
chrome-browser = { git = "https://github.com/tibellium/crates", rev = "0c46e1c7dfc8fccbe7d43dcbd5c5db779dc6a5a1" }
drm-widevine = { path = "../drm/widevine", features = ["static-devices"] }
reqwest = { version = "0.13", features = ["json", "socks"] }
base64 = "0.22"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Channel manifest system
serde_yaml = "0.9"
include_dir = "0.7"
jsonpath-rust = "0.7"
sxd-document = "0.3"
sxd-xpath = "0.4"
regex = "1"
glob-match = "0.2"
chrono = "0.4.43"
tokio-util = { version = "0.7.18", features = ["io"] }
futures = "0.3.31"
scraper = "0.20"
