[package]
name = "vidwall"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gpui = "0.2"
ffmpeg-next = "8"
image = "0.25"
rand = "0.8"
walkdir = "2"
cpal = "0.15"
parking_lot = "0.12"
ringbuf = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
uuid = "1"
