[package]
name = "wdv3"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
aes = "0.8"
cmac = "0.7"
rsa = "0.9"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
rand = "0.8"
signature = "2"

prost = "0.14"
wdv3-proto = { path = "../wdv3-proto" }

data-encoding = "2"
hex = "0.4"
hex-literal = "1.1"
thiserror = "2"
