[package]
name = "drm-cli"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
drm-widevine = { path = "../widevine" }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.13"
anyhow = "1"
hex = "0.4"
rsa = "0.9"

[[bin]]
name = "wdv3"
path = "src/main.rs"
