[package]
name = "drm-playready"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[features]
static-devices = ["dep:include_dir"]

[dependencies]
drm-core = { path = "../core" }
drm-playready-format = { path = "../playready-format" }

p256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
ecdsa = "0.16"
aes = "0.8"
cbc = "0.1"
ecb = "0.1"
cmac = "0.7"
sha2 = "0.10"
rand = "0.9"

hex = "0.4"
hex-literal = "1.1"
thiserror = "2"

include_dir = { version = "0.7", optional = true }
