[package]
name = "drm-playready"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[features]
static-devices = ["dep:include_dir"]

[dependencies]
drm-core = { path = "../core" }
drm-playready-format = { path = "../playready-format" }

p256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
ecdsa = "0.16"
aes = "0.8"
cbc = "0.1"
ecb = "0.1"
cmac = "0.7"
sha2 = "0.10"
rand = "0.9"

data-encoding = "2"
hex = "0.4"
hex-literal = "1.1"
quick-xml = "0.37"
thiserror = "2"

include_dir = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.13"
anyhow = "1"

[[example]]
name = "get_keys"
required-features = ["static-devices"]
