[package]
name = "drm-widevine"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[features]
static-devices = ["dep:include_dir"]

[dependencies]
drm-core = { path = "../core" }
drm-widevine-proto = { path = "../widevine-proto" }

aes = "0.8"
cmac = "0.7"
rsa = "0.9"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
rand = "0.9"
signature = "2"

data-encoding = "2"
hex = "0.4"
hex-literal = "1.1"
thiserror = "2"

include_dir = { version = "0.7", optional = true }
