[package]
name = "ffmpeg-encode"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Media encoding for the ffmpeg crate ecosystem"

[dependencies]
ffmpeg-types = { path = "../types" }
ffmpeg-next = "8"

[features]
default = []
videotoolbox = []
nvenc = []
qsv = []
vaapi = []
