[package]
name = "ffmpeg-source"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Media source and demuxing for the ffmpeg crate ecosystem"

[dependencies]
ffmpeg-types = { path = "../types" }
ffmpeg-next = "8"

[features]
default = ["file"]
file = []
# Future features for HTTP/HLS support
# http = ["reqwest", "tokio"]
# hls = ["http"]
